force-app/main/default/objects/PVSetting__mdt/PVSetting__mdt.object-meta.xml
<CustomObject>
    <label>PVSetting</label>
    <pluralLabel>PVSettings</pluralLabel>
</CustomObject>