force-app/main/default/objects/PVSetting__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <inlineHelpText>Consumer ID on app connected in PV Org called Chuzo_org</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>