force-app/main/default/objects/PVSetting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <inlineHelpText>Consumer Secret on app connected in PV Org called Chuzo_org</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>