force-app/main/default/objects/PVSetting__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <inlineHelpText>Value &quot;password&quot;</inlineHelpText>
    <label>Grant Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>