force-app/main/default/objects/PVSetting__mdt/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <inlineHelpText>Org login url.
examples:
https://test.salesforce.com/services/oauth2/token
https://login.salesforce.com/services/oauth2/token</inlineHelpText>
    <label>Login URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>