force-app/main/default/objects/PVSetting__mdt/fields/PV_URL__c.field-meta.xml
<CustomField>
    <fullName>PV_URL__c</fullName>
    <inlineHelpText>PV URL. Replace &quot;mydomain&quot; with the domain of the org.

https://mydomain.lightning.force.com/services/data/v53.0/query/</inlineHelpText>
    <label>PV URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>