force-app/main/default/objects/PVSetting__mdt/fields/PV_URL_Patch__c.field-meta.xml
<CustomField>
    <fullName>PV_URL_Patch__c</fullName>
    <inlineHelpText>PV URL to patch requests. Replace &quot;mydomain&quot; with the domain of the org

https://mydomain.my.salesforce.com/services/data/v53.0/composite/sobjects</inlineHelpText>
    <label>PV URL Patch</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>